# gabrielkaszewski_rs

./: .gitignore  Cargo.toml  bun.lockb  compose.yml  docker-compose.yml  dockerfile  entrypoint.sh  package.json  tailwind.config.js
assets/static/css/: input.css  main.css
assets/static/images/: ja.avif  optimized.avif
assets/static/js/: data-delete.js  data-upload.js  home.js  navbar.js  project-item.js  project-upload.js
assets/views/website/: about.html  base.html  create-job.html  create-project.html  data-upload.html  data.html  index.html  login.html  project-detail.html  project_detail.html  (+1 more)
config/: development.yaml
examples/: playground.rs
migration/src/: lib.rs  m20241029_235230_skills.rs  m20241030_002154_jobs.rs  m20241030_024340_projects.rs  m20241030_024830_data.rs  m20241102_204505_add_file_name_to_data.rs  m20241106_005545_project_thumbnails.rs  m20241110_011041_add_is_highlighted_to_project.rs
src/: app.rs  lib.rs
src/controllers/: auth.rs  data.rs  job.rs  mod.rs  project.rs  website.rs
src/filters/: markdown.rs
src/initializers/: view_engine.rs
src/models/: data.rs  jobs.rs  mod.rs  project_thumbnails.rs  projects.rs  skills.rs
src/services/: auth.rs  data.rs  jobs.rs  mod.rs  projects.rs  skills.rs  website.rs
src/shared/: get_file_name_with_extension.rs  get_technologies_from_string.rs  mod.rs
src/tasks/: add_data_file.rs  clear_data.rs  create_job.rs  create_skill.rs  delete_data.rs  delete_project.rs  import_skills.rs  mod.rs
src/views/: auth.rs  data.rs  job.rs  mod.rs  projects.rs  website.rs
tests/models/: mod.rs  project_thumbnails.rs  users.rs
tests/requests/: auth.rs  data.rs  mod.rs  prepare_data.rs  project.rs
tests/tasks/: seed.rs
(+14 files in other folders)
